gopls/mcpbridge/test/testdata/projects/error/missing_import.go

package main

func MissingImport() {
	// Using an unimported package
	x := make(chan int)
	close(x)
}
